# weaviate-poc

./: README.md  docker-compose.yml  embedded.py  hello.py  hybrid.py  jeopardy-generate.py  jeopardy.py  pyproject.toml  question-local.py  question.py
